# Acrux

./: .gitattributes  .gitignore  CHANGELOG.md  NOTICE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_LICENSES.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: binary.yml
benchmarks/: BENCHMARK.md  ab_harness.py  ability_eval.md  enforced_gate_eval.py  offline_ab.py  replay_engine.py  trajectory.py  transforms.py
benchmarks/fixtures/trajectories/: cat_large.json  grep_heavy.json  growing_history.json  ls_recursive.json
benchmarks/phase2/: PROTOCOL.md  RESULTS.md  curate.py  report.py  score.py  views.py
benchmarks/phase2/battery/: keymd_self.json  schema.py
benchmarks/phase2/run_log/: T1.json  T2.json  T3.json  T4.json  T5.json  T6.json
benchmarks/phase2/run_log_escape/: T1.json  T2.json  T3.json  T4.json  T5.json  T6.json
benchmarks/phase2/run_log_s2/: S2-slugify-stopword.json
benchmarks/terminalbench/: README.md  build_corpus.py
docs/superpowers/plans/: 2026-05-29-keymd-implementation-plan.md  2026-05-29-keymd-index-engine.md  2026-05-29-keymd-phase3-proxy.md  2026-05-30-keymd-ide-inclusivity.md  2026-05-30-keymd-regular-user-onboarding.md
docs/superpowers/specs/: 2026-05-29-keymd-token-saver-design.md  2026-05-30-keymd-regular-user-onboarding-design.md
packaging/: README.md  build_binary.sh  pyapp.env
scripts/: gen_third_party_licenses.py  validate_sse.py
src/keymd/: __main__.py  cli.py  demo.py  onboarding.py  update.py  wire.py
src/keymd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/keymd/assets/: graph.html
src/keymd/engine/: config.py  db.py  graph.py  index.py  keymd_render.py  query.py  redact.py  refresh.py  settings.py  summary_store.py  sync_one.py
src/keymd/engine/parsers/: __init__.py  base.py  docx.py  markdown.py  pdf.py  python.py  treesitter.py
src/keymd/guardrails/: checks.py  cli.py
src/keymd/proxy/: bounders.py  cache_inject.key.md  cache_inject.py  engine.py  gate.py  graph_server.py  live.py  orchestrator.py  result_bound.py  selfcheck.py  server.py  token_ledger.py  tools.py
src/keymd/proxy/adapters/: anthropic.py  base.py  openai.py  responses.py
src/keymd/summarize/: adapters.py  run.py
src/keymd/watcher/: debounce.py  dispatch.py  run.py
templates/: AGENTS.md  handoff.md
tests/: conftest.py  test_anchors_and_edit.py  test_bench_corpus_builder.py  test_bench_fixtures.py  test_bench_replay.py  test_bench_trajectory.py  test_bench_transforms.py  test_cli.py  test_cli_summarize.py  test_cli_target.py  test_config.py  test_db.py  test_debounce.py  test_demo.py  test_doc_pdf_docx.py  test_e2e.py  test_enforced_gate_eval.py  test_fixture.py  test_graph.py  test_graph_query.py  test_graph_server.py  test_guardrails.py  test_index.py  test_keymd_render.py  test_live_watch.py  test_markdown_doc.py  test_no_secret_leaks.py  test_onboarding.py  test_parser_js_ts.py  test_parser_python_edges.py  test_parser_python_symbols.py  test_parser_treesitter_clang.py  test_parsers_base.py  test_phase2_battery.py  test_phase2_curate.py  test_phase2_report.py  test_phase2_score.py  test_phase2_views.py  test_proxy_adapter_anthropic.py  test_proxy_adapter_base.py  (+41 more)
tests/fixtures/sample_proj/pkg/: parser.py  pipeline.py
