[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keymd"
dynamic = ["version"]                 # single-sourced from keymd.__version__ (bump that for a release)
description = "Cross-framework token-saving enforcement layer: LLM-optimized .key.md sidecars + call-graph index + local enforcing proxy"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ruaskar" }]
keywords = ["llm", "agents", "tokens", "proxy", "code-index", "tree-sitter"]
classifiers = [
    # Repo is public + Apache-2.0; install is git-based (see README). This guard
    # still makes PyPI/twine REJECT an upload — publishing to PyPI is a deliberate
    # later step (remove this line, then `twine upload`).
    "Private :: Do Not Upload",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
# Upper bounds are deliberate: lower-only bounds let pip's resolver wander a huge
# version space on a fresh install (starlette alone has ~195 releases above 0.37)
# and backtrack — the "install hangs" symptom. Each cap is the next breaking
# boundary; the pinned, test-verified versions live in requirements.lock. Bounds
# travel in the wheel metadata, so they fix the binary's first-run pip install too.
dev = ["pytest>=8,<10"]
proxy = ["httpx>=0.27,<0.29", "starlette>=0.37,<2", "uvicorn>=0.30,<0.45"]
watch = ["watchdog>=4,<7"]
lang = ["tree-sitter>=0.25,<0.26", "tree-sitter-javascript>=0.23,<0.26", "tree-sitter-typescript>=0.23,<0.26"]
docs = ["pypdf>=4,<7", "python-docx>=1,<2"]
all = ["httpx>=0.27,<0.29", "starlette>=0.37,<2", "uvicorn>=0.30,<0.45", "watchdog>=4,<7",
       "tree-sitter>=0.25,<0.26", "tree-sitter-javascript>=0.23,<0.26", "tree-sitter-typescript>=0.23,<0.26",
       "pypdf>=4,<7", "python-docx>=1,<2"]

[project.urls]
Repository = "https://github.com/ruaskar/Acrux"

[project.scripts]
keymd = "keymd.cli:main"

[tool.setuptools.dynamic]
version = { attr = "keymd.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
keymd = ["assets/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
